fix(stationMap): size on Safari
Regression of e1d523952143596aa3d424c9e96a7ccb894f40c8.

Ref: https://samuelkraft.com/blog/safari-15-bottom-tab-bars-web

Fixes #664.

--- a/app/css/scss/organisms/_map-cockpit-2024.scss
+++ b/app/css/scss/organisms/_map-cockpit-2024.scss
@@ -43,8 +43,9 @@ $cp-breakpoint-3: 1024px;
 
 .weather-map-cockpit {
   z-index: 2;
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  bottom: env(safe-area-inset-bottom);
   width: 100vw;
 
   font-size: $cp-font-size-medium;
